--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-youtube"></i>
-            <p>Ⓒcopyright sharpfade hair saloon</p>
+            <p>Ⓒcopyright 2024 Harsh Rathod</p>
         </div>
     </section>
     <script>
